--- a/Week 1 Notebooks/GDAN 5400 - Week 1 Class Notebook.ipynb
+++ b/Week 1 Notebooks/GDAN 5400 - Week 1 Class Notebook.ipynb
@@ -223,14 +223,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "5a44fb60",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5a44fb60",
-        "outputId": "658080b7-f5a7-4e62-e0fc-c0d7ae49a335"
+        "outputId": "f2e8ac47-b350-4464-a9d1-fac54d50ba5b"
       },
       "outputs": [
         {
@@ -241,7 +241,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ],
       "source": [
@@ -371,12 +371,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "1a5f9e9b",
       "metadata": {
-        "id": "1a5f9e9b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1a5f9e9b",
+        "outputId": "42a55a22-0501-47b8-b80a-bf48ec73e455"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
         "# Comparison operators\n",
         "x = 5\n",
